--- a/BlackCoinMultipool.UI.WindowsPhone/BlackCoinMultipool.UI.WindowsPhone.csproj
+++ b/BlackCoinMultipool.UI.WindowsPhone/BlackCoinMultipool.UI.WindowsPhone.csproj
@@ -142,6 +142,8 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Icons\appbar.donate.png" />
+    <Content Include="Assets\Icons\appbar.refresh.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -159,10 +161,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\statistics_resources.xaml">
+    <Page Include="Resources\statistics_resources.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
+    </Page>
     <Page Include="Views\AboutView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
