--- a/BlackCoinMultipool.Core/packages.config
+++ b/BlackCoinMultipool.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack-PCL" version="1.4.6" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
@@ -8,4 +9,5 @@
   <package id="MvvmCross.HotTuna.MvvmCrossLibraries" version="3.1.1" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="MvvmCross.HotTuna.Plugin.Json" version="3.1.1" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="MvvmCross.PortableSupport" version="3.1.1" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
 </packages>
