--- a/BlackCoinMultipool.UI.WindowsPhone/packages.config
+++ b/BlackCoinMultipool.UI.WindowsPhone/packages.config
@@ -8,4 +8,5 @@
   <package id="MvvmCross.HotTuna.MvvmCrossLibraries" version="3.1.1" targetFramework="wp80" />
   <package id="MvvmCross.HotTuna.Plugin.Json" version="3.1.1" targetFramework="wp80" />
   <package id="MvvmCross.PortableSupport" version="3.1.1" targetFramework="wp80" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="wp80" />
 </packages>
