--- a/BlackCoinMultipool.UI.Android/BlackCoinMultipool.UI.Android.csproj
+++ b/BlackCoinMultipool.UI.Android/BlackCoinMultipool.UI.Android.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Views\AboutView.cs" />
+    <Compile Include="Views\Controls\GaugeView.cs" />
     <Compile Include="Views\DonationView.cs" />
     <Compile Include="Views\Fragments\DonateBitcoinFragment.cs" />
     <Compile Include="Views\Fragments\DonateBlackcoinFragment.cs" />
@@ -396,7 +397,9 @@
     <AndroidResource Include="Resources\Layout-port\SettingsView.axml" />
     <AndroidResource Include="Resources\Layout-port\SplashScreen.axml" />
     <AndroidResource Include="Resources\Layout-port\StatisticsView.axml" />
-    <AndroidResource Include="Resources\Menu\statistics_activity_actions.axml" />
+    <AndroidResource Include="Resources\Menu\statistics_activity_actions.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\Drawable\blackcointheme_ab_background_textured.axml" />
     <AndroidResource Include="Resources\Drawable\blackcointheme_btn_cab_done.axml" />
     <AndroidResource Include="Resources\Layout\StatisticsSha256HashrateFragment.axml">
@@ -406,6 +409,9 @@
       <SubType>AndroidResource</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\Layout\DonateBitcoinFragment.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\Values\attrs.xml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
   </ItemGroup>
