android icon fix

--- a/BlackCoinMultipool.UI.Android/BlackCoinMultipool.UI.Android.csproj
+++ b/BlackCoinMultipool.UI.Android/BlackCoinMultipool.UI.Android.csproj
@@ -112,6 +112,12 @@
     <Reference Include="DK.Ostebaronen.Droid.ViewPagerIndicator">
       <HintPath>..\BlackCoinMultipool.Core\ReferenceDLL\Android\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Threading.Tasks">
+      <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\portable-net45+win8+wpa81\Microsoft.Threading.Tasks.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Threading.Tasks.Extensions">
+      <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\portable-net45+win8+wpa81\Microsoft.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Export" />
     <Reference Include="mscorlib" />
