--- a/BlackCoinMultipool.UI.Android/Properties/AndroidManifest.xml
+++ b/BlackCoinMultipool.UI.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="nl.auspex.blackcoinpool">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="nl.auspex.blackcoinpool" android:versionCode="1" android:versionName="1">
 	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="14" />
-	<application android:theme="@style/BlackcoinTheme"></application>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<application android:theme="@style/BlackcoinTheme" android:label="Blackcoin Pool" android:icon="@drawable/icon"></application>
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
